@startuml
skinparam classAttributeIconSize 0

hide methods
left to right direction

class Plataforma {
  -String designacao
}

class Organizacao {
  -String nome
  -String NIF
  -String website
  -String telefone
  -String email
}
class CaraterCT {
  -Boolean obrigatoria
}

class Freelancer {
  -String nome
  -String NIF
  -String telefone
  -String email
}
class Endereco {
  -String local
  -String codPostal
  -String localidade
}

class Utilizador {
  -String nome
  -String email
  -String password
}

class Tarefa {
  -String refUnica
  -String designacao
  -String descInf
  -String descTec
  -Integer duracao
  -Double custo
}

class Anuncio {
   -String refTarefa
   -String periodoPub
   -String peridooCand
   -String periodoSeriacao
   -String refRegimento
}

class Candidatura {
  -Date dataCandidatura
  -Double valorPretendido
  -Integer numDias
  -String txtApresentacao
  -String txtMotivacao
}

class Reconhecimento {
   -String designacao
   -String data
}

class CompetenciaTecnica {
   -String codigo
   -String descBreve
   -String descDetalhada
}
class GrauProficiencia {
   -String designacao
   -Integer valor
}
class Categoria {
   -String id
   -String descricao
}
(Categoria, CompetenciaTecnica) .. CaraterCT
Plataforma "1" -- "*" Organizacao : possui >
Plataforma "1" -- "1..*" Freelancer: tem registados >
Freelancer "1" -- "*" Candidatura : faz >
Freelancer "0..1" -- "1" Utilizador : atua como >
Freelancer "0..1" -- "*" Endereco : tem >
Freelancer "1" -- "*" Reconhecimento : possui >
Reconhecimento "1" -- "*" CompetenciaTecnica : referente a >
Reconhecimento "1" -- "1" GrauProficiencia : referente a >
CompetenciaTecnica "1" -- "1" GrauProficiencia : associado a >
Anuncio "0..1" -- "*" Tarefa: gera <
Tarefa "1" -- "1" Categoria : enquadra-se em >
Categoria "*" -- "0..1" CompetenciaTecnica : gera >
Plataforma "1" -- "1" Anuncio : publicita >
Candidatura "1" -- "*" Anuncio : enviada a >
@enduml